# quadratic_equation_solver

./: .gitignore  CMakeLists.txt  Makefile  README.md  clear_buffer.c  clear_buffer.h  floating_point_math.c  floating_point_math.h  main.c  quadratic_equation_solver.c  quadratic_equation_solver.cpp  quadratic_equation_solver.h  quadratic_equation_solver.sln  quadratic_equation_solver.vcxproj  quadratic_equation_solver.vcxproj.filters  quadratic_equation_tests.c  quadratic_equation_tests.h
include/: floating_point_math.h  quadratic_equation_solver.h  quadratic_equation_tests.h
sources/: floating_point_math.c  main.c  quadratic_equation_solver.c  quadratic_equation_tests.c
